small changes, added transitions

--- a/computations/BSC_LilliJoppien.ipynb
+++ b/computations/BSC_LilliJoppien.ipynb
@@ -244,13 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sortInGrid3(measure1, measure2, size, data):\n",
-    "    data.sort(key=lambda tup: tup[measure1])\n",
+    "    data.sort(key=lambda tup: tup[measure2])\n",
     "    filtered = [data[math.floor(i)] for i in np.linspace(0, len(data)-1, (size*size))]\n",
+    "    filtered.sort(key=lambda tup: tup[measure1])\n",
     "    grid = [None] * size\n",
     "    for i in range (0,size):\n",
     "        grid[i]= filtered[size*i:size*i+size]\n",
@@ -298,31 +299,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def drawGrid(data=[], size=1, m1='lr', m2='perp'):\n",
-    "    grid = sortInGrid(m1,m2, size, data)\n",
-    "    fig, axs = plt.subplots(size, size, figsize=(35, 35))\n",
-    "    fbsdict = {1: '#ad494a', 2: '#e69e57', 3: '#14a5b5',4:'#9467bd', 5:'#989aa1'}\n",
-    "    for x in range(0,size):\n",
-    "        for y in range(0,size):\n",
-    "            vis = grid[x][y]\n",
-    "            #a,b,c = computeClusterTopography(np.array(vis['projects']), vis['entropies'], 400,400, interpolation='linear')\n",
-    "            #axs[x,y].contourf(a,b,c, levels=[4.1,4.15,4.2,4.25,4.3,4.35,4.4,4.45,4.5,4.55,4.6,4.65,4.7,4.75,4.8,4.85,4.9,4.95,5], cmap=\"Greys\")\n",
-    "            axs[x, y].scatter([i[0] for i in vis['projects']],[i[1] for i in vis['projects']],\n",
-    "                        10,[fbsdict[i] for i in vis['classes']])\n",
-    "            axs[x, y].set_title(\"x: \"+ str(round(vis[m2],2))+\" y:\"+ str(round(vis['lr'],2)))\n",
-    "    for ax in fig.get_axes():\n",
-    "        ax.set_facecolor('#0e0e0e')\n",
-    "        plt.setp(ax.spines.values(), color='grey', linewidth=2)\n",
-    "        ax.get_xaxis().set_visible(False)\n",
-    "        ax.get_yaxis().set_visible(False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -364,7 +340,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def drawGrid(data=[], size=1, m1='lr', m2='perp'):\n",
+    "    grid = sortInGrid3(m1,m2, size, data)\n",
+    "    fig, axs = plt.subplots(size, size, figsize=(35, 35))\n",
+    "    fbsdict = {1: '#ad494a', 2: '#e69e57', 3: '#14a5b5',4:'#9467bd', 5:'#989aa1'}\n",
+    "    for x in range(0,size):\n",
+    "        for y in range(0,size):\n",
+    "            vis = grid[x][y]\n",
+    "            #a,b,c = computeClusterTopography(np.array(vis['projects']), vis['entropies'], 400,400, interpolation='linear')\n",
+    "            #axs[x,y].contourf(a,b,c, levels=[4.1,4.15,4.2,4.25,4.3,4.35,4.4,4.45,4.5,4.55,4.6,4.65,4.7,4.75,4.8,4.85,4.9,4.95,5], cmap=\"Greys\")\n",
+    "            axs[x, y].scatter([i[0] for i in vis['projects']],[i[1] for i in vis['projects']],\n",
+    "                        10,[fbsdict[i] for i in vis['classes']])\n",
+    "            axs[x, y].set_title(\"x: \"+ str(round(vis[m2],2))+\" y:\"+ str(round(vis['lr'],2)))\n",
+    "    for ax in fig.get_axes():\n",
+    "        ax.set_facecolor('#0e0e0e')\n",
+    "        plt.setp(ax.spines.values(), color='grey', linewidth=2)\n",
+    "        ax.get_xaxis().set_visible(False)\n",
+    "        ax.get_yaxis().set_visible(False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +420,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78f41ce55b3c4d5690a0777e6cf0d74b",
+       "model_id": "67901b1411e041d097864bc922b80c90",
        "version_major": 2,
        "version_minor": 0
       },
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -461,10 +462,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.LineCollection at 0x7fca58cdeb50>"
+       "<matplotlib.collections.LineCollection at 0x7f9055ed70d0>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
